--- a/DMActivityInstagram/DMActivityInstagram-Info.plist
+++ b/DMActivityInstagram/DMActivityInstagram-Info.plist
@@ -16,6 +16,10 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>instagram</string>
+	</array>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
